# praxis

./: .deepsource.toml  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .npmignore  .pre-commit-config.yaml  .shellcheckrc  CLAUDE.md  LICENSE  README.md  SECURITY.md  install.sh  package.json  pyproject.toml  setup-dirs.sh  uninstall.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  harness-lint.yml  publish.yml
base/: CLAUDE.md
base/commands/: context-reset.md  debug.md  discover.md  discuss.md  execute.md  fast.md  gsd-discuss.md  gsd-execute.md  gsd-verify.md  kit.md  next.md  plan.md  quick.md  ralph.md  review.md  risk.md  ship.md  spec.md  standup.md  verify.md
base/configs/: registry.json
base/hooks/: auto-format.sh  context7-remind.sh  credential-guard.sh  dep-audit.sh  file-guard.sh  identity-check.sh  post-session-lint.sh  quality-check.sh  recursion-guard.sh  secret-scan.sh  session-data-collect.sh  settings-hooks.json  vault-checkpoint.sh
base/lib/: kit-check.sh  output.sh
base/rules/: architecture.md  azure.md  code-excellence.md  code-quality.md  coding.md  communication.md  profile.md  (+12 more)
docs/: architecture.md  creating-a-kit.md  mcp-servers.md  runbook.md
lib/: assemblers.js  loader.js
scripts/: health-check.sh  install-tools.sh  lint-harness.sh  onboard-mcp.sh  test-harness.sh  update.sh
templates/: _index.md  adr.md  claude-progress.json  decision-log.md  plan.md  project-index.md  session-note.md  status.md  tasks.md
tests/: test_hooks.py  test_sync.py  test_verify_command.py
(+275 files in other folders)
