[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-cli"
version = "0.2.0"
description = "PRAXIS — Disciplined action protocol for AI-assisted development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RedDogSME"}
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
praxis = "praxis_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
praxis_cli = ["templates/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
